--- a/Website/index.html
+++ b/Website/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="css/util.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <script src="app.js" defer></script>
-    <title>Document</title>
+    <title>Order Food</title>
 </head>
 <body>
     <header>
