--- a/Website/index.html
+++ b/Website/index.html
@@ -11,7 +11,21 @@
 </head>
 <body>
     <header>
+        <div class="header-left flex">
+            <img src="images/temp-logo.jpg" alt="logo" height="50">
+            <button>Your Location<i class="fa fa-chevron-down"></i> </button>
+        </div>
 
+        <form class="flex">
+            <input type="search" name="search" id="search" placeholder="search">
+            <button>Sort<i class="fa fa-chevron-down"></i></button>
+        </form>
+        
+        <nav>
+            <button class="btn">Sign-In</button>
+            <button class="btn">Register</button>
+        </nav>
     </header>
+
 </body>
 </html>
