--- a/Website/index.html
+++ b/Website/index.html
@@ -27,5 +27,37 @@
         </nav>
     </header>
 
+    <aside>
+        <div class="card">
+            <ul>
+                <li>Home</li>
+                <li>Popular</li>
+                <li>Favourites</li>
+            </ul>
+        </div>
+
+        <div class="card">
+            <h2>Categories</h2>
+            <ul>
+                <li>Chicken</li>
+                <li>Sandwiches</li>
+                <li>Vegetarian</li>
+                <li>Burgers</li>
+                <li>Desserts</li>
+                <li>Pizza</li>
+                <li>Breakfast</li>
+                <li>Wings</li>
+                <li>Smoothies</li>
+                <li>Gluten Free</li>
+            </ul>
+        </div>
+
+        <div class="card">
+            <h2>Policy</h2>
+            <ul>
+                <li>Some Policy Goes here</li>
+            </ul>
+        </div>
+    </aside>
 </body>
 </html>
