--- a/Website/index.html
+++ b/Website/index.html
@@ -11,23 +11,24 @@
 </head>
 <body>
     <header>
-        <div class="header-left flex">
-            <img src="images/temp-logo.jpg" alt="logo" height="50">
-            <button>Your Location<i class="fa fa-chevron-down"></i> </button>
+        <div class="header-box-1">
+            <button id="sidebar_toggle" class="sidebar-toggle"><i class="fa fa-bars"></i></button>
+            <img class="logo" src="images/temp-logo.jpg" alt="logo" height="50">
+            <button id="location" class="location">Your Location<i class="fa fa-chevron-down"></i> </button>
         </div>
 
-        <form class="flex">
+        <form class="header-box-2">
             <input type="search" name="search" id="search" placeholder="search">
-            <button>Sort<i class="fa fa-chevron-down"></i></button>
+            <button id="search_sort" class="search_sort">Sort<i class="fa fa-chevron-down"></i></button>
         </form>
         
-        <nav>
+        <nav class="header-box-3">
             <button class="btn">Sign-In</button>
             <button class="btn">Register</button>
         </nav>
     </header>
 
-    <aside>
+    <aside id="sidebar">
         <div class="card">
             <ul>
                 <li>Home</li>
@@ -60,27 +61,29 @@
         </div>
     </aside>
 
-    <main>
-        <div class="card"></div>
-        <div class="card"></div>
-        <div class="card"></div>
-        <div class="card"></div>
-        <div class="card"></div>
-        <div class="card"></div>
-        <div class="card"></div>
-        <div class="card"></div>
-        <div class="card"></div>
-        <div class="card"></div>
-        <div class="card"></div>
-        <div class="card"></div>
-        <div class="card"></div>
-        <div class="card"></div>
-        <div class="card"></div>
-        <div class="card"></div>
-        <div class="card"></div>
-        <div class="card"></div>
-        <div class="card"></div>
-        <div class="card"></div>
+    <main id="main">
+        <section class="food-display">
+            <div class="card"></div>
+            <div class="card"></div>
+            <div class="card"></div>
+            <div class="card"></div>
+            <div class="card"></div>
+            <div class="card"></div>
+            <div class="card"></div>
+            <div class="card"></div>
+            <div class="card"></div>
+            <div class="card"></div>
+            <div class="card"></div>
+            <div class="card"></div>
+            <div class="card"></div>
+            <div class="card"></div>
+            <div class="card"></div>
+            <div class="card"></div>
+            <div class="card"></div>
+            <div class="card"></div>
+            <div class="card"></div>
+            <div class="card"></div>
+        </section>
     </main>
 </body>
 </html>
