Added Cash Only Statement

--- a/Website/index.html
+++ b/Website/index.html
@@ -56,7 +56,7 @@
         <div class="card">
             <h2>Policy</h2>
             <ul>
-                <li>Some Policy Goes here</li>
+                <li>We accept cash only</li>
             </ul>
         </div>
     </aside>
