Improved Side bar

--- a/Website/index.html
+++ b/Website/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/util.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
     <script src="app.js" defer></script>
     <title>Order Food</title>
 </head>
@@ -29,31 +30,31 @@
     </header>
 
     <aside id="sidebar">
-        <div class="card">
-            <ul>
-                <li>Home</li>
-                <li>Popular</li>
-                <li>Favourites</li>
+        <div class="sidebar-category">
+            <ul class="links-column">
+                <li><i class="fa fa-home"></i><p>Home</p></li>
+                <li><i class="fa fa-fire"></i><p>Popular</p></li>
+                <li><i class="fa fa-heart"></i><p>Favourites</p></li>
             </ul>
         </div>
 
-        <div class="card">
+        <div class="sidebar-category">
             <h2>Categories</h2>
-            <ul>
-                <li>Chicken</li>
-                <li>Sandwiches</li>
-                <li>Vegetarian</li>
-                <li>Burgers</li>
-                <li>Desserts</li>
-                <li>Pizza</li>
-                <li>Breakfast</li>
-                <li>Wings</li>
-                <li>Smoothies</li>
-                <li>Gluten Free</li>
+            <ul class="links-column">
+                <li><i></i><p>Fish</p></li>
+                <li><i></i>Sandwiches</li>
+                <li><i></i>Vegetarian</li>
+                <li><i></i>Burgers</li>
+                <li><i></i>Desserts</li>
+                <li><i></i>Pizza</li>
+                <li><i></i>Breakfast</li>
+                <li><i></i>Wings</li>
+                <li><i></i>Smoothies</li>
+                <li><i></i>Gluten Free</li>
             </ul>
         </div>
 
-        <div class="card">
+        <div class="sidebar-category"">
             <h2>Policy</h2>
             <ul>
                 <li>We accept cash only</li>
