Few images added

--- a/Website/index.html
+++ b/Website/index.html
@@ -64,26 +64,26 @@
 
     <main id="main">
         <section class="food-display">
-            <div class="card"></div>
-            <div class="card"></div>
-            <div class="card"></div>
-            <div class="card"></div>
-            <div class="card"></div>
-            <div class="card"></div>
-            <div class="card"></div>
-            <div class="card"></div>
-            <div class="card"></div>
-            <div class="card"></div>
-            <div class="card"></div>
-            <div class="card"></div>
-            <div class="card"></div>
-            <div class="card"></div>
-            <div class="card"></div>
-            <div class="card"></div>
-            <div class="card"></div>
-            <div class="card"></div>
-            <div class="card"></div>
-            <div class="card"></div>
+            <div class="card"><img src="images\falafel_place.jpg"></div>
+            <div class="card"><img src="images\subway.jpg"></div>
+            <div class="card"><img src="images\burgerking.jpg"></div>
+            <div class="card"><img src="images\aw.jpg"></div>
+            <div class="card"><img src="images\freshii.jpg"></div>
+            <div class="card"><img src="images\pita_pit.jpg"></div>
+            <div class="card"><img src="images\tim_hortons.jpg"></div>
+            <div class="card"><img src="images\wendys.jpg"></div>
+            <div class="card"><img src="images\smittys.jpg"></div>
+            <div class="card"><img src="images\falafel_place.jpg"></div>
+            <div class="card"><img src="images\falafel_place.jpg"></div>
+            <div class="card"><img src="images\falafel_place.jpg"></div>
+            <div class="card"><img src="images\falafel_place.jpg"></div>
+            <div class="card"><img src="images\falafel_place.jpg"></div>
+            <div class="card"><img src="images\falafel_place.jpg"></div>
+            <div class="card"><img src="images\falafel_place.jpg"></div>
+            <div class="card"><img src="images\falafel_place.jpg"></div>
+            <div class="card"><img src="images\falafel_place.jpg"></div>
+            <div class="card"><img src="images\falafel_place.jpg"></div>
+            <div class="card"><img src="images\falafel_place.jpg"></div>
         </section>
     </main>
 </body>
