C3P-33 finished styling for card

--- a/Website/index.html
+++ b/Website/index.html
@@ -138,7 +138,7 @@
             </ul>
         </div>
 
-        <div class="sidebar-category"">
+        <div class="sidebar-category">
             <h2>Policy</h2>
             <ul>
                 <li>We accept cash only</li>
@@ -149,7 +149,19 @@
     <main id="main">
         <section class="food-display">
             <div class="card">
-              <img src="images\falafel_place.jpg">
+              <div class = "restImg">
+                <img src="images\falafel_place.jpg">
+                <div class = "restLogo">LOGO</div>
+              </div>
+              <div class = "cardInfo">
+                <div class = "restName">Resturant Name</div>
+                <div class = "distance">km Away </div>
+                <div class = "border"></div>
+                <div class = "priceAndRate">
+                  <p>$$$</p>
+                  <p>★★★</p>
+                </div>
+              </div>
             </div>
             <div class="card">
               <img src="images\subway.jpg">
