--- a/Website/index.html
+++ b/Website/index.html
@@ -19,7 +19,7 @@
         </div>
 
         <form class="header-box-2">
-            <input type="search" name="search" id="search" placeholder="search">
+            <input id="search" class="search" type="search" name="search"  placeholder="search">
             <button id="search_sort" class="search_sort">Sort<i class="fa fa-chevron-down"></i></button>
         </form>
         
