--- a/Website/index.html
+++ b/Website/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="css/util.css">
     <link rel="stylesheet" href="css/popups.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <script src="app.js" defer></script>
+    <script type="module" src="app.js" defer></script>
     <title>Order Food</title>
 </head>
 <body>
@@ -139,7 +139,7 @@
     </div>
 
     <main id="main">
-        <section class="food-display">
+        <section id="food-display" class="food-display">
             <div class="card">
               <div class = "restImg">
                 <img src="images\falafel_place.jpg">
@@ -154,63 +154,6 @@
                   <p>★★★</p>
                 </div>
               </div>
-            </div>
-            <div class="card">
-              <img src="images\subway.jpg">
-            </div>
-            <div class="card">
-              <img src="images\taco_del_mar.jpg">
-            </div>
-            <div class="card">
-              <img src="images\aw.jpg">
-            </div>
-            <div class="card">
-              <img src="images\freshii.jpg">
-            </div>
-            <div class="card">
-              <img src="images\pita_pit.jpg">
-            </div>
-            <div class="card">
-              <img src="images\tim_hortons.jpg">
-            </div>
-            <div class="card">
-              <img src="images\wendys.jpg">
-            </div>
-            <div class="card">
-              <img src="images\smittys.jpg">
-            </div>
-            <div class="card">
-              <img src="images\sato_sushi.jpg">
-            </div>
-            <div class="card">
-              <img src="images\aroma_bistro.jpg">
-            </div>
-            <div class="card">
-              <img src="images\boston_pizza.jpg">
-            </div>
-            <div class="card">
-              <img src="images\earls_kitchen_bar.jpg">
-            </div>
-            <div class="card">
-              <img src="images\sushi_gozen.jpg">
-            </div>
-            <div class="card">
-              <img src="images\mcdonalds.jpg">
-            </div>
-            <div class="card">
-              <img src="images\pizza_hut.jpg">
-            </div>
-            <div class="card">
-              <img src="images\sushi_jet.jpg">
-            </div>
-            <div class="card">
-              <img src="images\menchies_frozen_yogurt.jpg">
-            </div>
-            <div class="card">
-              <img src="images\montanas.jpg">
-            </div>
-            <div class="card">
-              <img src="images\burgerking.jpg">
             </div>
         </section>
     </main>
