Made ratings stars

--- a/Website/index.html
+++ b/Website/index.html
@@ -151,7 +151,7 @@
                 <div class = "border"></div>
                 <div class = "priceAndRate">
                   <p>$$$</p>
-                  <p>★★★</p>
+                  <p><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i></p>
                 </div>
               </div>
             </div>
