You can see the policy feature now but I don't know yet how to click on it

--- a/Website/index.html
+++ b/Website/index.html
@@ -115,17 +115,26 @@
         </div>
 
         <div class="sidebar-category">
-          <button class="btn" onclick="document.getElementById('policy').style.display='block'" style="width:100%;" >
+          <ul>
+           <li><button class="btn" onclick="document.getElementById('policy').style.display='block'" style="width:100%;" >
             Policy</button>
-            <ul>
-                <li>We accept cash only</li>
-            </ul>
+            </li>  
+           <li>We accept cash only
+           </li>
+          </ul>
         </div>
+        
     </aside>
 
     <div id="policy" class="modal">
       <form class="modal-content anim-zoom" action="/action_page.php" method="post">
         <div class="titlecontainer">
+          <div>
+            <h1>Introduction</h1>
+            This policy describes the types of information we may collect from you or that you may 
+            provide when you visit the website fooddudesdelivery.com (our “Website”) and our practices 
+            for collecting, using, maintaining, protecting, and disclosing that information.
+          </div>
           <span onclick="document.getElementById('policy').style.display='none'" class="close"
             title="Close Modal">&times;</span>
           <div> POLICY </div>
