--- a/Website/order.html
+++ b/Website/order.html
@@ -14,7 +14,7 @@
     <header>
         <div class="header-box-1">
             <button id="sidebar_toggle" class="sidebar-toggle"><i class="fa fa-bars"></i></button>
-            <img class="logo" src="images/logos/logo.png" alt="logo" height="70px">
+            <img class="logo" src="images/logos/logo.png" alt="logo" height="70">
             <button id="location" class="location">Your Location<i class="fa fa-chevron-down"></i> </button>
         </div>
 
@@ -92,26 +92,17 @@
     <aside id="sidebar">
         <div class="sidebar-category">
             <ul class="links-column">
-                <li><i class="fa fa-home"></i><a>Home</a></li>
+                <li><i class="fa fa-home"></i><a href="index.html"> Home</a></li>
                 <li><i class="fa fa-fire"></i><p>Popular</p></li>
                 <li><i class="fa fa-heart"></i><p>Favourites</p></li>
             </ul>
         </div>
-
+        
+        <!--The cart on the left side-->
         <div class="sidebar-category">
-            <h2>Categories</h2>
-            <ul class="links-column">
-                <li><i></i><p>Fish</p></li>
-                <li><i></i>Sandwiches</li>
-                <li><i></i>Vegetarian</li>
-                <li><i></i>Burgers</li>
-                <li><i></i>Desserts</li>
-                <li><i></i>Pizza</li>
-                <li><i></i>Breakfast</li>
-                <li><i></i>Wings</li>
-                <li><i></i>Smoothies</li>
-                <li><i></i>Gluten Free</li>
-            </ul>
+           <div class="cart">
+            <h1 class="cart_title">CART</h1>
+           </div> 
         </div>
 
         <div class="sidebar-category">
@@ -147,26 +138,7 @@
       </form>
     </div>
 
-    <main id="main">
-        <section id="food-display" class="food-display">
-            <div class="card">
-              <a href = "order.html">
-              <div class = "restImg">
-                <img src="images\restaurants\aw.jpg"> 
-                <div class = "restLogo">LOGO</div>
-              </div>
-            </a>
-              <div class = "cardInfo">
-                <div class = "restName">A & W</div>
-                <div class = "distance">km Away </div>
-                <div class = "border"></div>
-                <div class = "priceAndRate">
-                  <p>$$$</p>
-                  <p><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i></p>
-                </div>
-              </div>
-            </div>       
-        </section>
+    <main id="main_order">
     </main>
 </body>
 </html>
