--- a/Website/order.html
+++ b/Website/order.html
@@ -14,7 +14,7 @@
     <header>
         <div class="header-box-1">
             <button id="sidebar_toggle" class="sidebar-toggle"><i class="fa fa-bars"></i></button>
-            <img class="logo" src="images/logos/logo.png" alt="logo" height="70">
+            <a href="index.html"><img class="logo" src="images/logos/logo.png" alt="logo" height="70px"></a>
             <button id="location" class="location">Your Location<i class="fa fa-chevron-down"></i> </button>
         </div>
 
@@ -92,7 +92,7 @@
     <aside id="sidebar">
         <div class="sidebar-category">
             <ul class="links-column">
-                <li><i class="fa fa-home"></i><a href="index.html"> Home</a></li>
+                <li><i class="fa fa-home"></i><a href="index.html">Home</a></li>
                 <li><i class="fa fa-fire"></i><p>Popular</p></li>
                 <li><i class="fa fa-heart"></i><p>Favourites</p></li>
             </ul>
