--- a/Website/index.html
+++ b/Website/index.html
@@ -14,7 +14,7 @@
     <header>
         <div class="header-box-1">
             <button id="sidebar_toggle" class="sidebar-toggle"><i class="fa fa-bars"></i></button>
-         <a  href="index.html"><img class="logo" src="images/logos/logo.png" alt="logo" height="70px"></a>
+         <a  href="index.html"><img class="logo" src="images/Logos/logo.png" alt="logo" height="70px"></a>
             <button id="location" class="location">Your Location<i class="fa fa-chevron-down"></i> </button>
         </div>
 
