--- a/Website/index.html
+++ b/Website/index.html
@@ -17,7 +17,14 @@
     <div class="header-box-1">
       <button id="sidebar_toggle" class="sidebar-toggle"><i class="fa fa-bars"></i></button>
       <a href="index.html"><img class="logo" src="images/Logos/logo.png" alt="logo" height="70px"></a>
-      <button id="location" class="location">Your Location<i class="fa fa-chevron-down"></i> </button>
+      <div class="address">
+        <button id="location" class="location">Your Location<i class="fa fa-chevron-down"></i> </button>
+
+        <div id="enter_location" class="enterLocationStyle">
+          <input type="text" placeholder="Enter address" name="address">
+        </div>
+      </div>
+
     </div>
 
     <form class="header-box-2">
