--- a/Website/order.html
+++ b/Website/order.html
@@ -54,7 +54,7 @@
   </div>
 
   <div id="register" class="modal">
-    <form class="modal-content anim-zoom" action="/action_page.php" method="post">
+    <form class="modal-content anim-zoom" onsubmit="return false" action="close">
       <div class="titlecontainer">
         <span onclick="document.getElementById('register').style.display='none'" class="close"
           title="Close Modal">&times;</span>
@@ -71,7 +71,8 @@
         <label for="psw"><b>Confirm password</b></label>
         <input type="password" placeholder="Enter Password" name="psw" required>
 
-        <button class="popup_button btn-submit" type="submit">Register</button>
+        <button class="popup_button btn-submit" type="submit"
+          onclick="document.getElementById('register').style.display='none'">Register</button>
       </div>
 
       <div class="container" style="background-color:#f1f1f1">
@@ -82,7 +83,7 @@
   </div>
 
   <div id="signin" class="modal">
-    <form class="modal-content anim-zoom" action="/action_page.php" method="post">
+    <form class="modal-content anim-zoom" onsubmit="return false" action="close">
       <div class="titlecontainer">
         <span onclick="document.getElementById('signin').style.display='none'" class="close"
           title="Close Modal">&times;</span>
@@ -96,9 +97,10 @@
         <label for="psw"><b>Password</b></label>
         <input type="password" placeholder="Enter Password" name="psw" required>
 
-        <button type="submit" class="popup_button">Login</button>
+        <button type="submit" class="popup_button"
+          onclick="document.getElementById('signin').style.display='none'">Login</button>
         <label>
-          <input type="checkbox" checked="checked" name="remember">
+          <input type="checkbox" name="remember">
           Remember me
         </label>
       </div>
@@ -259,7 +261,6 @@
             PHONE NUMBER: 2048888888<br>
             ADDRESS: Random Address, Winnipeg
           </div>
-        
         </div>
       </div>
     </div>
@@ -269,6 +270,31 @@
       <div>Main</div>
       <div>Desserts</div>
       <div>Drinks</div>
+    </div>
+
+    <div class="menu">
+
+      <div class="menu_item_image">
+        <img src="images/restaurants//aw/burger1.jpg" class="menu_image">
+      </div>
+
+      <div class="menu_item_background">
+        Best Burger - Beef patite, pickels, onion, mayo, and ketchop
+      </div>
+
+      <div class="menu_item_background ">
+        <button class="add_remove_item">- </button>
+        1
+        <button class="add_remove_item "> +</button></td>
+      </div>
+
+      <div class="menu_item_background">
+        5 $
+      </div>
+      <div class="menu_item_background ">
+        **
+      </div>
+
     </div>
 
   </main>
