--- a/Website/index.html
+++ b/Website/index.html
@@ -17,7 +17,7 @@
   <header>
     <div class="header-box-1">
       <button id="sidebar_toggle" class="sidebar-toggle"><i class="fa fa-bars"></i></button>
-      <a href="index.html"><img class="logo" src="images/Logos/logo.png" alt="logo" height="70px"></a>
+      <a href="index.html#home"><img class="logo" src="images/Logos/logo.png" alt="logo" height="70px"></a>
       <div class="address">
         <button class="location" onclick="document.getElementById('location').style.display='block'"
           style="width:auto;">Your Location<i class="fa fa-chevron-down"></i> </button>
