--- a/Website/index.html
+++ b/Website/index.html
@@ -8,8 +8,10 @@
   <link rel="stylesheet" href="css/util.css">
   <link rel="stylesheet" href="css/popups.css">
   <link rel="stylesheet" href="css/menu.css">
+  <link rel="stylesheet" href="css/dropdown.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <script type="module" src="app.js" defer></script>
+  <script src="script/display_functions.js"></script>
   <title>Order Food</title>
 </head>
 
@@ -17,18 +19,31 @@
   <header>
     <div class="header-box-1">
       <button id="sidebar_toggle" class="sidebar-toggle"><i class="fa fa-bars"></i></button>
-      <a href="index.html"><img class="logo" src="images/Logos/logo.png" alt="logo" height="70px"></a>
+      <a href="index.html">
+        <img class="logo" src="images/Logos/logo.png" alt="logo" height="70px">
+      </a>
       <div class="address">
         <button class="location" onclick="document.getElementById('location').style.display='block'"
-          style="width:auto;">Your Location<i class="fa fa-chevron-down"></i> </button>
+          style="width:auto;">Your Location<i class="fa fa-chevron-down"></i>
+        </button>
       </div>
-
     </div>
 
     <form class="header-box-2">
       <input id="search" class="search" type="search" name="search" placeholder="search">
-      <button id="search_sort" class="search_sort">Sort<i class="fa fa-chevron-down"></i></button>
+      <button type="button" id="search_sort" class="search_sort" onclick="openSortMenu()">Sort
+        <i class="fa fa-chevron-down"></i>
+      </button>
+      <div class="dropdown">
+        <div id="sort-options" class="dropdown-content">
+          <button class="btn">Distance</button>
+          <button class="btn">Price</button>
+          <button class="btn"> Rating</button>
+        </div>
+      </div>
     </form>
+
+
 
     <nav class="header-box-3">
       <button class="btn" onclick="document.getElementById('signin').style.display='block'" style="width:auto;">
@@ -50,7 +65,7 @@
         <input class="popup_button btn-submit" type="submit" value="Find Restaurants in Your Area"
           onclick="document.getElementById('location').style.display='none'">
       </div>
-    </form>>
+    </form>
   </div>
 
   <div id="register" class="modal">
