--- a/Website/order.html
+++ b/Website/order.html
@@ -141,10 +141,11 @@
           </tr>
           <tr>
             <td>item 1</td>
-            <td>
-              <button class="add_remove_item">- </button>
-              1
-              <button class="add_remove_item"> +</button></td>
+            <td class="cart_count">
+              <i class="fa fa-plus btn-icon"></i>
+              <p>1</p>
+              <i class="fa fa-minus btn-icon"></i>
+            </td>
             <td>$ 3</td>
           </tr>
           <tr>
