Account signin, register, signout

--- a/Website/index.html
+++ b/Website/index.html
@@ -43,10 +43,10 @@
 
 
     <nav class="header-box-3">
-      <button class="btn" onclick="document.getElementById('signin').style.display='block'" style="width:auto;">
-        Sign-In</button>
-      <button class="btn" onclick="document.getElementById('register').style.display='block'" style="width:auto;">
-        Register</button>
+      <h3 id="username-display" class="username-display" style="display: none;">Username</h2>
+      <button id="btn-logout" class="btn" style="display: none;">Logout</button>
+      <button id="btn-signin" class="btn" onclick="document.getElementById('signin').style.display='block'" style="width:auto;">Sign-In</button>
+      <button id="btn-register" class="btn" onclick="document.getElementById('register').style.display='block'" style="width:auto;">Register</button>
     </nav>
   </header>
 
@@ -74,16 +74,16 @@
       </div>
 
       <div class="container">
-        <label for="uname"><b>Username</b></label>
-        <input type="text" placeholder="Enter Username" name="uname" required>
+        <label><b>Username</b></label>
+        <input id='register-username' name="username" type="text" placeholder="Enter Username" required>
 
-        <label for="psw"><b>Password</b></label>
-        <input type="password" placeholder="Enter Password" name="psw" required>
+        <label><b>Password</b></label>
+        <input id='register-password' name="password1" type="password" placeholder="Enter Password" required>
 
-        <label for="psw"><b>Confirm password</b></label>
-        <input type="password" placeholder="Enter Password" name="psw" required>
+        <label><b>Confirm password</b></label>
+        <input id='register-password-2' name="password2" type="password" placeholder="Enter Password" required>
 
-        <button class="popup_button btn-submit" type="submit" onclick="document.getElementById('register').style.display='none'">Register</button>
+        <button id='register-submit' name="submit" class="popup_button btn-submit" type="submit" onclick="document.getElementById('register').style.display='none'">Register</button>
       </div>
 
       <div class="container" style="background-color:#f1f1f1">
@@ -102,13 +102,13 @@
       </div>
 
       <div class="container">
-        <label for="uname"><b>Username</b></label>
-        <input type="text" placeholder="Enter Username" name="uname" required>
+        <label><b>Username</b></label>
+        <input id='login-username' name="username" type="text" placeholder="Enter Username" required>
 
-        <label for="psw"><b>Password</b></label>
-        <input type="password" placeholder="Enter Password" name="psw" required>
+        <label><b>Password</b></label>
+        <input id='login-password' name="password1"  type="password" placeholder="Enter Password" required>
 
-        <button type="submit" class="popup_button" onclick="document.getElementById('signin').style.display='none'">Login</button>
+        <button id='login-submit' name="submit" class="popup_button" type="submit">Login</button>
         <label>
           <input type="checkbox" name="remember">
           Remember me
