--- a/Website/index.html
+++ b/Website/index.html
@@ -26,19 +26,19 @@
       </div>
     </div>
 
-    <form class="header-box-2">
+    <div class="header-box-2">
       <input id="search" class="search" type="search" name="search" placeholder="search">
       <button type="button" id="search_sort" class="search_sort" onclick="openSortMenu()">Sort
         <i class="fa fa-chevron-down"></i>
       </button>
       <div class="dropdown">
         <div id="sort-options" class="dropdown-content">
-          <button class="btn">Distance</button>
-          <button class="btn">Price</button>
-          <button class="btn"> Rating</button>
+          <button id="sort-distance" class="btn">Distance</button>
+          <button id="sort-price" class="btn">Price</button>
+          <button id="sort-rating" class="btn"> Rating</button>
         </div>
       </div>
-    </form>
+    </div>
 
 
 
