--- a/Website/index.html
+++ b/Website/index.html
@@ -26,7 +26,7 @@
       </div>
     </div>
 
-    <div class="header-box-2">
+    <div id='search-header' class="header-box-2">
       <input id="search" class="search" type="search" name="search" placeholder="search">
       <button type="button" id="search_sort" class="search_sort" onclick="openSortMenu()">Sort
         <i class="fa fa-chevron-down"></i>
