--- a/Website/index.html
+++ b/Website/index.html
@@ -21,7 +21,7 @@
       <button id="sidebar_toggle" class="sidebar-toggle"><i class="fa fa-bars"></i></button>
       <a href="index.html#home"><img class="logo" src="images/Logos/logo.png" alt="logo" height="70px"></a>
       <div class="address">
-        <button id='location-button' class="location" onclick="document.getElementById('location').style.display='block'"
+        <button id='location-button' type = 'button' class="location" onclick="openPopUpID('location')"
           style="width:auto;">Your Location<i class="fa fa-chevron-down"></i> </button>
       </div>
     </div>
@@ -43,24 +43,26 @@
 
 
     <nav class="header-box-3">
-      <button class="btn" onclick="document.getElementById('signin').style.display='block'" style="width:auto;">
-        Sign-In</button>
-      <button class="btn" onclick="document.getElementById('register').style.display='block'" style="width:auto;">
-        Register</button>
+      <button class="btn" type='button' onclick="openPopUpID('signin')" style="width:auto;">
+        Sign-In
+      </button>
+      <button class="btn" type='button' onclick="openPopUpID('register')" style="width:auto;">
+        Register
+      </button>
     </nav>
   </header>
 
   <div id="location" class="modal">
     <form class="modal-content anim-zoom" onsubmit="return false" action="close">
       <div class="titlecontainer">
-        <span onclick="document.getElementById('location').style.display='none'" class="close"
-          title="Close Modal">&times;</span>
+        <span onclick="closePopUpID('location')" class="close" title="Close Modal">
+          &times;
+        </span>
         <div class="location" style="cursor:initial;">Enter Your Address</div>
       </div>
       <div class="container">
         <input type="text" id="location-input" name="location"><br><br>
-        <input id='location-submit' class="popup_button btn-submit" type="submit" value="Find Restaurants in Your Area"
-          onclick="document.getElementById('location').style.display='none'">
+        <input id='location-submit' class="popup_button btn-submit" type="submit" value="Find Restaurants in Your Area" onclick="closePopUpID('location')">
       </div>
     </form>
   </div>
@@ -68,27 +70,37 @@
   <div id="register" class="modal">
     <form class="modal-content anim-zoom" onsubmit="return false" action="close">
       <div class="titlecontainer">
-        <span onclick="document.getElementById('register').style.display='none'" class="close"
-          title="Close Modal">&times;</span>
+        <span onclick="closePopUpID('register')" class="close" title="Close Modal">
+          &times;
+        </span>
         <div>REGISTER</div>
       </div>
 
       <div class="container">
-        <label for="uname"><b>Username</b></label>
+        <label for="uname">
+          <b>Username</b>
+        </label>
         <input type="text" placeholder="Enter Username" name="uname" required>
 
-        <label for="psw"><b>Password</b></label>
+        <label for="psw">
+          <b>Password</b>
+        </label>
         <input type="password" placeholder="Enter Password" name="psw" required>
 
-        <label for="psw"><b>Confirm password</b></label>
+        <label for="psw">
+          <b>Confirm password</b>
+        </label>
         <input type="password" placeholder="Enter Password" name="psw" required>
 
-        <button class="popup_button btn-submit" type="submit" onclick="document.getElementById('register').style.display='none'">Register</button>
+        <button class="popup_button btn-submit" type="submit" onclick="closePopUpID('register')">
+          Register
+        </button>
       </div>
 
       <div class="container" style="background-color:#f1f1f1">
-        <button type="button" onclick="document.getElementById('register').style.display='none'"
-          class="popup_button cancelbtn">Cancel</button>
+        <button type="button" onclick="closePopUpID('register')" class="popup_button cancelbtn">
+          Cancel
+        </button>
       </div>
     </form>
   </div>
@@ -96,19 +108,23 @@
   <div id="signin" class="modal">
     <form class="modal-content anim-zoom" onsubmit="return false" action="close">
       <div class="titlecontainer">
-        <span onclick="document.getElementById('signin').style.display='none'" class="close"
-          title="Close Modal">&times;</span>
+        <span onclick="closePopUpID('signin')" class="close" title="Close Modal">&times;
+        </span>
         <div>SIGN IN</div>
       </div>
 
       <div class="container">
-        <label for="uname"><b>Username</b></label>
+        <label for="uname">
+          <b>Username</b>
+        </label>
         <input type="text" placeholder="Enter Username" name="uname" required>
 
-        <label for="psw"><b>Password</b></label>
+        <label for="psw">
+          <b>Password</b>
+        </label>
         <input type="password" placeholder="Enter Password" name="psw" required>
 
-        <button type="submit" class="popup_button" onclick="document.getElementById('signin').style.display='none'">Login</button>
+        <button type="submit" class="popup_button" onclick="closePopUpID('signin')">Login</button>
         <label>
           <input type="checkbox" name="remember">
           Remember me
@@ -116,9 +132,9 @@
       </div>
 
       <div class="container" style="background-color:#f1f1f1">
-        <button type="button" onclick="document.getElementById('signin').style.display='none'"
-          class="popup_button cancelbtn">
-          Cancel</button>
+        <button type="button" onclick="closePopUpID('signin')" class="popup_button cancelbtn">
+          Cancel
+        </button>
         <span class="psw">Forgot <a href="#">password?</a></span>
       </div>
     </form>
@@ -128,9 +144,13 @@
     <div class="sidebar-category">
       <ul class="links-column">
         <a href="index.html">
-          <li><i class="fa fa-home"></i>Home</li>
+          <li>
+            <i class="fa fa-home">
+
+            </i>Home</li>
         </a>
-        <li><i class="fa fa-fire"></i>
+        <li>
+          <i class="fa fa-fire"></i>
           <p>Popular</p>
         </li>
         <li><i class="fa fa-heart"></i>
@@ -159,10 +179,13 @@
 
     <div class="sidebar-category">
       <ul>
-        <li><button class="btn" onclick="document.getElementById('policy').style.display='block'" style="width:100%;">
-            Policy</button>
+        <li>
+          <button class="btn" type='button' onclick="openPopUpID('policy')" style="width:100%;">
+            Policy
+          </button>
         </li>
-        <li>We accept cash only
+        <li>
+          We accept cash only
         </li>
       </ul>
     </div>
@@ -178,13 +201,14 @@
           provide when you visit the website foodelivery.com (our “Website”) and our practices
           for collecting, using, maintaining, protecting, and disclosing that information.
         </div>
-        <span onclick="document.getElementById('policy').style.display='none'" class="close"
-          title="Close Modal">&times;</span>
+        <span onclick="closePopUpID('policy')" class="close" title="Close Modal">
+          &times;
+        </span>
         <div> POLICY </div>
       </div>
 
       <div class="container" style="background-color:#f1f1f1">
-        <button type="button" onclick="document.getElementById('policy').style.display='none'"
+        <button type="button" onclick="closePopUpID('policy')"
           class="popup_button cancelbtn">
           Cancel</button>
       </div>
@@ -206,7 +230,11 @@
           <div class="border"></div>
           <div class="priceAndRate">
             <p>$$$</p>
-            <p><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i></p>
+            <p>
+              <i class="fa fa-star"></i>
+              <i class="fa fa-star"></i>
+              <i class="fa fa-star"></i>
+            </p>
           </div>
         </div>
       </div>
