updated checkout page

--- a/Website/index.html
+++ b/Website/index.html
@@ -44,9 +44,9 @@
 
     <nav class="header-box-3">
       <h3 id="username-display" class="username-display" style="display: none;">Username</h2>
-      <button id="btn-logout" class="btn" style="display: none;">Logout</button>
-      <button id="btn-signin" class="btn" onclick="document.getElementById('signin').style.display='block'" style="width:auto;">Sign-In</button>
-      <button id="btn-register" class="btn" onclick="document.getElementById('register').style.display='block'" style="width:auto;">Register</button>
+      <button id="btn-logout" class="btn" type='button' style="display: none;">Logout</button>
+      <button id="btn-signin" class="btn" type='button' onclick="openPopUpID('signin')" style="width:auto;">Sign-In</button>
+      <button id="btn-register" class="btn" type='button' onclick="openPopUpID('register')" style="width:auto;">Register</button>
     </nav>
   </header>
 
