updated order page

--- a/Website/order.html
+++ b/Website/order.html
@@ -27,13 +27,22 @@
 
     <form class="header-box-2">
       <input id="search" class="search" type="search" name="search" placeholder="search">
-      <button id="search_sort" class="search_sort">Sort<i class="fa fa-chevron-down"></i></button>
+      <button id="search_sort" type='button' class="search_sort" onclick="openSortMenu()">Sort
+        <i class="fa fa-chevron-down"></i>
+      </button>
+      <div class="dropdown">
+        <div id="sort-options" class="dropdown-content">
+          <button id="sort-distance" class="btn">Distance</button>
+          <button id="sort-price" class="btn">Price</button>
+          <button id="sort-rating" class="btn"> Rating</button>
+        </div>
+      </div>
     </form>
 
     <nav class="header-box-3">
-      <button class="btn" onclick="document.getElementById('signin').style.display='block'" style="width:auto;">
+      <button class="btn" type='button' onclick="openPopUpID('signin')" style="width:auto;">
         Sign-In</button>
-      <button class="btn" onclick="document.getElementById('register').style.display='block'" style="width:auto;">
+      <button class="btn" type='button' onclick="openPopUpID('register')" style="width:auto;">
         Register</button>
     </nav>
   </header>
@@ -41,14 +50,14 @@
   <div id="location" class="modal">
     <form class="modal-content anim-zoom" onclick="return false" action="close">
       <div class="titlecontainer">
-        <span onclick="document.getElementById('location').style.display='none'" class="close"
+        <span onclick="closePopUpID('location')" class="close"
           title="Close Modal">&times;</span>
         <div class="location" style="cursor:initial;">Enter Your Address</div>
       </div>
       <div class="container">
         <input type="text" id="location" name="location"><br><br>
         <input class="popup_button btn-submit" type="submit" value="Find Restaurants in Your Area"
-          onclick="document.getElementById('location').style.display='none'">
+          onclick="closePopUpID('location')">
       </div>
     </form>>
   </div>
@@ -56,7 +65,7 @@
   <div id="register" class="modal">
     <form class="modal-content anim-zoom" onsubmit="return false" action="close">
       <div class="titlecontainer">
-        <span onclick="document.getElementById('register').style.display='none'" class="close"
+        <span onclick="closePopUpID('register')" class="close"
           title="Close Modal">&times;</span>
         <div>REGISTER</div>
       </div>
@@ -72,11 +81,11 @@
         <input type="password" placeholder="Enter Password" name="psw" required>
 
         <button class="popup_button btn-submit" type="submit"
-          onclick="document.getElementById('register').style.display='none'">Register</button>
+          onclick="closePopUpID('register')">Register</button>
       </div>
 
       <div class="container" style="background-color:#f1f1f1">
-        <button type="button" onclick="document.getElementById('register').style.display='none'"
+        <button type="button" type='button' onclick="closePopUpID('register')"
           class="popup_button cancelbtn">Cancel</button>
       </div>
     </form>
@@ -85,7 +94,7 @@
   <div id="signin" class="modal">
     <form class="modal-content anim-zoom" onsubmit="return false" action="close">
       <div class="titlecontainer">
-        <span onclick="document.getElementById('signin').style.display='none'" class="close"
+        <span onclick="closePopUpID('signin')" class="close"
           title="Close Modal">&times;</span>
         <div>SIGN IN</div>
       </div>
@@ -98,7 +107,7 @@
         <input type="password" placeholder="Enter Password" name="psw" required>
 
         <button type="submit" class="popup_button"
-          onclick="document.getElementById('signin').style.display='none'">Login</button>
+          onclick="closePopUpID('signin')">Login</button>
         <label>
           <input type="checkbox" name="remember">
           Remember me
@@ -106,7 +115,7 @@
       </div>
 
       <div class="container" style="background-color:#f1f1f1">
-        <button type="button" onclick="document.getElementById('signin').style.display='none'"
+        <button type="button" onclick="closePopUpID('signin')"
           class="popup_button cancelbtn">
           Cancel</button>
         <span class="psw">Forgot <a href="#">password?</a></span>
@@ -194,7 +203,7 @@
 
     <div class="sidebar-category">
       <ul>
-        <li><button class="btn" onclick="document.getElementById('policy').style.display='block'" style="width:100%;">
+        <li><button class="btn" type='button' onclick="openPopUpID('policy')" style="width:100%;">
             Policy</button>
         </li>
         <li>We accept cash only
@@ -213,13 +222,13 @@
           provide when you visit the website foodelivery.com (our “Website”) and our practices
           for collecting, using, maintaining, protecting, and disclosing that information.
         </div>
-        <span onclick="document.getElementById('policy').style.display='none'" class="close"
+        <span onclick="closePopUpID('policy')" class="close"
           title="Close Modal">&times;</span>
         <div> POLICY </div>
       </div>
 
       <div class="container" style="background-color:#f1f1f1">
-        <button type="button" onclick="document.getElementById('policy').style.display='none'"
+        <button type="button" onclick="closePopUpID('policy')"
           class="popup_button cancelbtn">
           Cancel</button>
       </div>
