--- a/Website/index.html
+++ b/Website/index.html
@@ -12,7 +12,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <script type="module" src="app.js" defer></script>
   <script src="script/display_functions.js"></script>
-  <title>Order Food</title>
+  <title>Eat & Enjoy</title>
 </head>
 
 <body>
