--- a/index.html
+++ b/index.html
@@ -1,1 +1,4 @@
+<!--DO NOT DELETE THIS FILE
+----This is so the teachers can go on the site 
+-->
 <meta http-equiv="refresh" content="0; url=https://comp-3020-group-37.github.io/fall-project-2020/Website/index.html">
