Login/Register warnning labels instead of alerts

--- a/Website/index.html
+++ b/Website/index.html
@@ -75,6 +75,7 @@
       </div>
 
       <div class="container">
+        <h4 id="warning-register" class="warning" style="display: none">Error Goes here</h4>
         <label><b>Username</b></label>
         <input id='register-username' name="username" type="text" placeholder="Enter Username" required>
 
@@ -84,7 +85,7 @@
         <label><b>Confirm password</b></label>
         <input id='register-password-2' name="password2" type="password" placeholder="Enter Password" required>
 
-        <button id='register-submit' name="submit" class="popup_button btn-submit" type="submit" onclick="document.getElementById('register').style.display='none'">Register</button>
+        <button id='register-submit' name="submit" class="popup_button btn-submit" type="submit">Register</button>
       </div>
 
       <div class="container" style="background-color:#f1f1f1">
@@ -104,6 +105,7 @@
       </div>
 
       <div class="container">
+        <h4 id="warning-userpass" class="warning" style="display: none">Did not find any accounts with that username and password</h4>
         <label><b>Username</b></label>
         <input id='login-username' name="username" type="text" placeholder="Enter Username" required>
 
