enter location warning

--- a/Website/index.html
+++ b/Website/index.html
@@ -59,6 +59,7 @@
         <div class="location" style="cursor:initial;">Enter Your Address</div>
       </div>
       <div class="container">
+        <h4 id="warning-location" class="warning" style="display: none">Error Goes here</h4>
         <input type="text" id="location-input" name="location"><br><br>
         <input id='location-submit' class="popup_button btn-submit" type="submit" value="Find Restaurants in Your Area" onclick="closePopUpID('location')">
       </div>
