--- a/Website/finalPage.html
+++ b/Website/finalPage.html
@@ -119,34 +119,13 @@
         </form>
     </div>
 
-    <main id="main_checkout">
-       <a href="order.html"> <button class="addMore_checkout btn">Add more items</button> </a>
-    <div class="checkout_grid">
-            <div class="final_cart_table">
-                    <div class ="final_cart_title">Item</div>
-                    <div class ="final_cart_title">Quantity</div>
-                    <div class ="final_cart_title">Price</div>
-                    
-                    <div>Item1</div>
-                    <div>1</div>
-                    <div>3 $</div>
-                    <div>Item 2</div>
-                    <div>2</div>
-                    <div>10 $</div>
-            </div>
-
-            <div class = "EnterCheckOut">Your Address: 
-                <input>
-            </div>
-
-            <div class = "EnterCheckOut">Phone #: 
-                <input>
-            </div>
-
-           <a href="finalPage.html"> <button class="placeOrder btn">Place Order</button></a>
-        </div>
+    <main id="main_final">
  
-
+        <div class="final">
+        Thank you for buying from us.
+        <br>
+        Your order is on the way!
+    </div>
     </main>
 
 </body>
