--- a/Website/index.html
+++ b/Website/index.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" href="css/util.css">
   <link rel="stylesheet" href="css/popups.css">
   <link rel="stylesheet" href="css/menu.css">
+  <link rel="stylesheet" href="css/checkout.css">
   <link rel="stylesheet" href="css/dropdown.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <script type="module" src="app.js" defer></script>
