Checkout final tweaks

--- a/Website/index.html
+++ b/Website/index.html
@@ -130,6 +130,26 @@
     </form>
   </div>
 
+  <div id="orderPlaced" class="modal">
+    <div class="modal-content anim-zoom">
+        <div class="titlecontainer">
+            <span onclick="closePopUpID('orderPlaced')" class="close"
+                title="Close Modal">&times;
+            </span>
+        </div>
+        <div class="container">
+          <h2 class="final-text">Thank you for buying from us.</h2>
+          <br>
+          <h2 class="final-text">Your order is on the way!</h2>
+        </div>
+        <div class="container" style="background-color:#f1f1f1">
+          <a href="index.html#home">
+            <button type="button" onclick="closePopUpID('orderPlaced')"class="popup_button cancelbtn">Close</button>
+          </a>
+        </div>
+    </div>
+  </div>
+
   <aside id="sidebar">
     <div class="sidebar-category">
       <ul class="links-column">
