--- a/Website/index.html
+++ b/Website/index.html
@@ -125,7 +125,7 @@
         <button type="button" onclick="closePopUpID('signin')" class="popup_button cancelbtn">
           Cancel
         </button>
-        <span class="psw">Forgot <a href="#">password?</a></span>
+        <span class="psw">Forgot password?</span>
       </div>
     </form>
   </div>
